# dynamic-motd-java

./: .anjuta_sym_db.db  Makefile  Makefile.am  Makefile.in  README.md  config.h  config.status  configure  configure.ac
.anjuta/session/: anjuta.session  dock-layout.xml
autom4te.cache/: output.1  requests  traces.0  traces.1
doc/: AUTHORS.md  LICENSE.md  Makefile.am  NEWS.md
src/: Main.java  Makefile  Makefile.am  Makefile.in  dynmotd-java
